name:                test-haskey
version:             0.1.0.0
synopsis:            A simple file leek test for haskey.
description:         Please see README.md
homepage:            https://github.com/Lupino/test-haskey#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable test-haskey
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskey-mtl
                     , haskey-btree
                     , haskey
                     , lens
                     , text
                     , mtl
                     , binary
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/haskey
